--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,7 @@ bs: 256
 lr: 0.0003
 epochs: 100
 gpus: 1
+num_workers: 8
 # Weight pathname for resuming training.
 resume: 
 # Shape of loh-mel spectrogram [F, T].
